@@ -4,8 +4,6 @@ plugins {
 	id("io.spring.dependency-management") version "1.1.3"
 }
 
-val ENABLE_PREVIEW = "--enable-preview"
-
 group = "com.example"
 version = "0.0.1-SNAPSHOT"
 
@@ -27,9 +25,13 @@ dependencies {
 
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 	implementation("org.springframework.boot:spring-boot-starter-mail")
-//	implementation("org.springframework.boot:spring-boot-starter-security")
+	implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
 	implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("io.jsonwebtoken:jjwt-api:0.11.5")
+
+    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
+    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")
 
 	compileOnly("org.projectlombok:lombok")
 	runtimeOnly("org.postgresql:postgresql")
@@ -43,10 +45,4 @@ dependencies {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
-//    jvmArgs(ENABLE_PREVIEW)
 }
-
-//tasks.withType<JavaCompile> {
-//    options.compilerArgs.add(ENABLE_PREVIEW)
-//}
-
